--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prepublishOnly": "npm test && npm run prettier ",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
-    "test": "jest --config jestconfig.json"
+    "test": "jest --config jestconfig.json",
+    "testW": "jest --config jestconfig.json --watch"
   },
   "files": [
     "dist",
@@ -48,6 +49,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "fast-xml-parser": "^4.0.9",
     "jest": "^28.1.3",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^28.1.3",
@@ -57,5 +59,17 @@
     "react-scripts": "^5.0.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.7.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
