--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "chsuvladimir/otrs-connector",
-  "version": "1.1.1",
+  "name": "@CHSUVladimir/otrs-connector",
+  "version": "1.1.3",
   "description": "OTRS web connector for soap",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/CHSUVladimir/Otrs-connector"
+    "url": "https://github.com/CHSUVladimir/Otrs-connector.git"
   },
   "publishConfig": {
     "access": "public"
